# orecle

./: .gitignore  GradingResults.ipynb  Orecle.ipynb  build_vector_store.py  category_viewer.py  clean_modpacks.csv  clean_modpacks_small.csv  clean_pack_csv.py  download_pack_csv.py  extract_recipes.py  modpacks.csv  modpacks_clean.csv  modpacks_clean1.csv  orecle.py  orecle_grader.py  orecle_grades.csv  orecle_grades1.csv  orecle_helper.py  pack-puller.py  pack_puller.py  pyproject.toml  query_vector_store.py  readme.md  utils.py
